--- a/themes/default/register.html
+++ b/themes/default/register.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	<title>用户登录</title>
-	<link rel="stylesheet" href="css/base.css" />
-	<link rel="stylesheet" href="css/global.css" />
-	<link rel="stylesheet" href="css/login-register.css" />
+	<link rel="stylesheet" href="<?= base_url('themes/default/css/base.css') ?>" />
+	<link rel="stylesheet" href="<?= base_url('themes/default/css/global.css') ?>" />
+	<link rel="stylesheet" href="<?= base_url('themes/default/css/login-register.css') ?>" />
 	
 </head>
 <body>
@@ -22,7 +22,7 @@
 				<form action="" method="POST">
 					<dl>
 						<dt>用户名</dt>
-						<dd><input type="text" name="user" class="text" /></dd>
+						<dd><input type="text" name="username" class="text" /></dd>
 					</dl>
 					<dl>
 						<dt>密码</dt>
@@ -65,7 +65,7 @@
 			
 			<div class="if">
 				<h2>如果您是本站用户</h2>
-				<p>我已经注册过账号，立即 <a href="" class="register">登录</a> 或是 <a href="" class="findpwd">找回密码？</a></p>
+				<p>我已经注册过账号，立即 <a href="<?= site_url('user/login') ?>" class="register">登录</a> 或是 <a href="" class="findpwd">找回密码？</a></p>
 			</div>
 		</div>
 	</div>
